[package]
name = "engines_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_valid ="0.11"
regex="1.7"
once_cell="1.1"
